--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       <nav class="navbar-links">
         <ul class="nav-items">
           <li class="nav-item"><a href="#hero">Home</a></li>
-          <li class="nav-item"><a href="#explore">Explore</a></li>
-          <li class="nav-item"><a href="#travel">Travel</a></li>
-          <li class="nav-item"><a href="#blogs">Blog</a></li>
+          <li class="nav-item"><a href="#atrractions">Attractions</a></li>
+          <li class="nav-item"><a href="#thingstodo">Things to do</a></li>
+          <li class="nav-item"><a href="#placestostay">Places to stay</a></li>
+          <li class="nav-item"><a href="#placestoeat">Places to eat</a></li>
         </ul>
       </nav>
       <a href="#!" class="nav-toggle">
@@ -68,9 +69,8 @@
       <div class="toggle-buttons">
         <div class="toggle-button toggle-button-prev popular-button-prev">
           <span>
-            <</span> </div> <div class="toggle-button toggle-button-next popular-button-next"><span>
-                >
-              </span></div>
+          </span> </div> <div class="toggle-button toggle-button-next popular-button-next"><span>
+           </span></div>
       </div>
       <div class="section-content">
         <div class="swiper-container swiper-popular">
